syntax = "proto2";

package proto;
import "enums.proto";
import "input_enums.proto";
import "device.proto";

message GPIOInput {
  required int32 pin = 1;
  required PinMode pinMode = 2;
  required bool analog = 3;
}

message MPR121Input {
  required int32 deviceid = 1;
  required int32 pin = 2;
  required Mpr121PinMode mode = 3;
  required PinMode pinMode = 4;
}

message MidiNoteInput { 
  required int32 deviceid = 1;
  required int32 note = 2; 
}

message MidiControlChangeInput { 
  required int32 deviceid = 1;
  required int32 cc = 2; 
}

message MidiPitchBendInput { 
  required int32 deviceid = 1; 
}

message FixedInput { required int32 value = 1; }

message WiiAxisInput {
  required int32 deviceid = 1;
  required WiiAxisType axis = 2;
}

message WiiButtonInput {
  required int32 deviceid = 1;
  required WiiButtonType button = 2;
}

message CrkdNeckButtonInput {
  required int32 deviceid = 1;
  required CrkdNeckButtonType button = 2;
}

message MouseAxisInput {
  required int32 deviceid = 1;
  required MouseAxisType axis = 2;
}

message MouseButtonInput {
  required int32 deviceid = 1;
  required MouseButtonType button = 2;
}

message KeyboardKeyInput {
  required int32 deviceid = 1;
  required int32 key = 2;
}

message Input {
  oneof input {
    GPIOInput gpio = 1;
    FixedInput fixed = 2;
    MPR121Input mpr121 = 3;
    MidiNoteInput midiNote = 4;
    MidiControlChangeInput midiControlChange = 5;
    MidiPitchBendInput midiPitchBend = 6;
    MouseAxisInput mouseAxis = 7;
    MouseButtonInput mouseButton = 8;
    WiiAxisInput wiiAxis = 9;
    WiiButtonInput wiiButton = 10;
    KeyboardKeyInput key = 11;
    CrkdNeckButtonInput crkd = 12;
  }
}

message GamepadButtonMapping {
  required GamepadButtonType button = 1;
  required bool inverted = 2;
  optional Input pressureInput = 3; // if there is no pressureInput, then set the pressures to max when the button is pressed
  optional AnalogToDigitalTriggerType trigger = 4;
}

message GamepadAxisMapping {
  required GamepadAxisType axis = 1;
  optional int32 onValue = 2; // if input is digital, use onValue when its active
  optional int32 offValue = 3; // and offValue when its inactive
}

message GuitarHeroGuitarButtonMapping {
  required GuitarHeroGuitarButtonType button = 1;
  required bool inverted = 2;
  optional AnalogToDigitalTriggerType trigger = 3;
}
message GuitarHeroGuitarAxisMapping {
  required GuitarHeroGuitarAxisType axis = 1;
  optional int32 onValue = 2; // if input is digital, use onValue when its active
  optional int32 offValue = 3; // and offValue when its inactive
}
message RockBandGuitarButtonMapping {
  required RockBandGuitarButtonType button = 1;
  required bool inverted = 2;
  optional AnalogToDigitalTriggerType trigger = 3;
}
message RockBandGuitarAxisMapping {
  required RockBandGuitarAxisType axis = 1;
  optional int32 onValue = 2; // if input is digital, use onValue when its active
  optional int32 offValue = 3; // and offValue when its inactive
}
message ProGuitarButtonMapping {
  required ProGuitarButtonType button = 1;
  required bool inverted = 2;
  optional AnalogToDigitalTriggerType trigger = 3;
}
message ProGuitarAxisMapping {
  required ProGuitarAxisType axis = 1;
  optional int32 onValue = 2; // if input is digital, use onValue when its active
  optional int32 offValue = 3; // and offValue when its inactive
}
message TurntableButtonMapping {
  required TurntableButtonType button = 1;
  required bool inverted = 2;
  optional AnalogToDigitalTriggerType trigger = 3;
}
message TurntableAxisMapping {
  required TurntableAxisType axis = 1;
  optional int32 onValue = 2; // if input is digital, use onValue when its active
  optional int32 offValue = 3; // and offValue when its inactive
}

message Mapping {
  oneof mapping {
    GamepadButtonMapping button = 1;
    GamepadAxisMapping axis = 2;
    GuitarHeroGuitarButtonMapping ghButton = 3;
    GuitarHeroGuitarAxisMapping ghAxis = 4;
    RockBandGuitarButtonMapping rbButton = 5;
    RockBandGuitarAxisMapping rbAxis = 6;
    ProGuitarButtonMapping proButton = 7;
    TurntableButtonMapping djButton = 8;
    TurntableAxisMapping djAxis = 9;
  }
  required Input input = 10;
}